--- a/lesson2/views/form.html
+++ b/lesson2/views/form.html
@@ -46,7 +46,7 @@
      </form>
      <form action="" method="" id="form" class="form" data-dev="">
          <div>
-           <label for="email">Nhập email <input type="email" name="email" placeholder="email" style="width: 250px; padding: 4px 8px"> </label>
+           Nhập email <input type="email" name="email" placeholder="email" style="width: 250px; padding: 4px 8px"> 
         </div>
         <div>
             <input type="password" name="password" placeholder="mật khẩu" style="width: 250px; padding: 4px 8px">
