--- a/lesson3/Views/thuchanh.html
+++ b/lesson3/Views/thuchanh.html
@@ -3,11 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài 6</title>
+    <title>Trang chủ</title>
 </head>
 <body>
-        <h1 align="center">Đăng kí thông tin người sử dụng</h1>
-        <form action="" method="post" id="form" class="form" data-dev="" > 
+    <!-- start header -->
+    <header>
+            <nav>
+                <div style="background-color: red;">
+                    <ul style="display: flex; list-style:none ;">
+                        <li style="padding: 8px 12px; margin-left: 120px;">
+                             <a href="https://www.youtube.com/">Trang chủ</a>
+                        </li>
+                        <li style="padding: 8px 12px;">
+                             <a href="https://www.youtube.com/">Sản phẩm</a>
+                        </li>
+                        <li style="padding: 8px 12px;">
+                             <a href="https://www.youtube.com/">Dịch vụ</a>
+                        </li>
+                        <li style="padding: 8px 12px;">
+                             <a href="https://www.youtube.com/">Tin tức</a>
+                        </li>
+                        <li style="padding: 8px 12px;">
+                             <a href="https://www.youtube.com/">Liên hệ</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+    </header>
+    
+    <!-- start body -->
+    <section>
+        <!-- banner -->
+           <div>
+               <img src="https://tse1.mm.bing.net/th?id=OIF.8Ng%2bj70JRH5NpqIjv%2b0BxA&pid=Api&P=0&h=180" alt="">
+           </div>
+           <!-- chi tiết bài viết -->
+           <div>
+               <h1>bài viết của tôi</h1>
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Maiores quae esse aliquid voluptatibus neque sint deserunt <br> minus laboriosam? Iusto cumque temporibus cupiditate <br> officia id sunt. Asperiores ab dolores modi dolorum?
+           </div>
+           <div>
+           <form action="" method="post" id="form" class="form" data-dev="" > 
             
                  <div>
                     <label for="text"> <b>Tên đăng nhập</b> <input type="text" name="username" id="username" ></label>
@@ -63,7 +99,34 @@
                     <input type="submit" name="2" value="Đăng kí">
                     <input type="submit" name="1" value="Làm lại">
                 </div>
+                <div>
+                    <h2>Tác giả: Nguyễn Văn Hải Ninh</h2>
+                </div>
+                <div>
+                    <h1>Tiếng muỗi kêu</h1>
+                </div>
+                <div>
+                    <video controls="controls" autoplay="autoplay">
+                         <source src="https://cdn.realtech.com.vn/uploads/1/news/2023/0/86/updat1.mp4?fbclid=IwAR2A_D51hLELCZBhG04himZVJmSi5NBUGq92WEeWJe0XcyeKoKVYsoqeHkA" type="video/mp4">
+                         
+                    </video>
+                </div>
+                <div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/1TbEou20DjI?si=cqMLOzkdTmZpgpdB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             
-        </form> 
+        </form>
+        </div>
+    </section>
+    <!-- end body -->
+
+
+    <!-- start footer -->
+    <footer>
+          
+    </footer>
+    <!-- end footer -->
+
+
 </body>
 </html>
