--- a/lesson5/Views/ex3.html
+++ b/lesson5/Views/ex3.html
@@ -28,11 +28,13 @@
                     
                    
                         <li class="tieude-menu">
-                            <a href="#" class="option"></div>Giới thiệu</a></li>
+                            <a href="#" class="option">Giới thiệu</a>
+                        </li>
                    
                 
                         <li class="tieude-menu">
-                            <a href="#"  class="option">Liên hệ</a></li>
+                            <a href="#"  class="option">Liên hệ</a>
+                        </li>
                     
                 </ul>
              </nav>
