--- a/lesson5/Views/review.html
+++ b/lesson5/Views/review.html
@@ -24,6 +24,10 @@
                        -Hiểu được css dùng để làm gì(4)
                        -Biết cách tạo và sử dụng css cơ bản (ghu nhớ và phân loại css)
                        -Nắm được cú pháp viết css (cách thức, độ ưu tiên)
+                    2, Thực hành các thuộc tính css cơ bản 
+                       - kết hợp các thuộc tính
+                       - triển khai các bài tập thực hành cụ thể: menu(đa cấp-mega);
+                                                                    các thẻ đối tượng(sản phẩm/bài viết)
              </pre>
         </section>
 
