--- a/lesson10/Views/homework.html
+++ b/lesson10/Views/homework.html
@@ -9,17 +9,30 @@
      <header></header>
 
      <section>
-        <div>
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" class="username">
-        </div>
-        <div>
-             <label for="pass">Pass  </label>
-             <input type="password" name="pass" id="pass" class="pass">
-             
-        </div>
-        <div>
-            <button type="button" onclick="searchName()">Đăng nhập</button>
+       
+        <div class="form-login" style="background-color: #ccc; width: 185px; padding: 30px; margin-top: 100px; margin-left: 647px;">
+            <div class="logo-login">
+                 <div class="img-logo">
+                       <img src="https://tse4.mm.bing.net/th?id=OIP.Kx4kLE_Js1LHBcBaUNNXGAHaHa&pid=Api&P=0&h=180" alt="logo" style="border-radius: 50%;">
+                 </div>
+            </div>
+            <div>
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" class="username">
+            </div>
+            <div>
+                 <label for="pass">Pass  </label>
+                 <input type="password" name="pass" id="pass" class="pass">
+                 
+            </div>
+            <div>
+                <button type="button" onclick="searchName()">Đăng nhập</button>
+            </div>
+                       <div class="form-help">
+                           <a href="#" style="text-decoration: none;">Bạn cần trợ giúp?</a>
+                       </div>
+                   </form>
+            </div>
         </div>
      </section>
 
