--- a/lesson12/Views/product.html
+++ b/lesson12/Views/product.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                 <img style="width: 100px;" src="https://devmaster.edu.vn/images/logo.png" alt="logo">
+                 <img style="width: 100px;" src="https://www.watchstore.vn/images/config/logo-watchstore3-9-24_1725292445.webp" alt="logo">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -77,7 +77,7 @@
     <section class="page-product">
            <div class="banner-product">
                  <div class="img-banner">
-                      <img class="w-100" src="https://devmaster.edu.vn/uploads/images/devmaster-campaign/devmaster-lap-trinh-vien-website-php-va-mysql-chuyen-nghiep.png" alt="">
+                      <img class="w-100" src="https://www.watchstore.vn/images/slideshow/2024/03/29/compress/13-418004996-684201329_1711706283.webp" alt="">
                  </div>
            </div>
 
@@ -90,7 +90,7 @@
                             <div class="row" id="list-items">
                                 <div class="col-3">
                                     <div class="card" ">
-                                        <img src="https://devmaster.edu.vn/uploads/images/2020/11/20-11-2020.jpg" class="card-img-top w-100" alt="...">
+                                        <img src="https://image.donghohaitrieu.com/wp-content/uploads/2024/05/Titoni-83743-S-682.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="card" ">
-                                        <img src="https://devmaster.edu.vn/uploads/images/2020/11/20-11-2020.jpg" class="card-img-top w-100" alt="...">
+                                        <img src="https://image.donghohaitrieu.com/wp-content/uploads/2023/09/AE-1200WHD-1AVDF.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -110,7 +110,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="card" ">
-                                        <img src="https://devmaster.edu.vn/uploads/images/2020/11/20-11-2020.jpg" class="card-img-top w-100" alt="...">
+                                        <img src="https://image.donghohaitrieu.com/wp-content/uploads/2024/01/K002.403.641.50.13.04.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="col-3">
                                     <div class="card" ">
-                                        <img src="https://devmaster.edu.vn/uploads/images/2020/11/20-11-2020.jpg" class="card-img-top w-100" alt="...">
+                                        <img src="https://www.watchstore.vn/images/products/2024/06/14/resized/mtp-1374l-1avdf_1718337912.webp" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
