--- a/lesson12/Views/product.html
+++ b/lesson12/Views/product.html
@@ -36,10 +36,10 @@
                       Sản phẩm
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Html</a></li>
-                      <li><a class="dropdown-item" href="#">Js</a></li>
-                      <li><hr class="dropdown-divider">.Net</li>
-                      <li><a class="dropdown-item" href="#">Css</a></li>
+                      <li><a class="dropdown-item" href="#">Đồng hồ nam</a></li>
+                      <li><a class="dropdown-item" href="#">Đồng hồ nữ</a></li>
+                      <li><hr class="dropdown-divider">Ví da</li>
+                      <li><a class="dropdown-item" href="#">Trang sức</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -93,7 +93,7 @@
                                         <img src="https://image.donghohaitrieu.com/wp-content/uploads/2024/05/Titoni-83743-S-682.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
-                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <p class="card-text">Trần Hoàng Hiệp đồng hồ chính hãng</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
@@ -103,7 +103,7 @@
                                         <img src="https://image.donghohaitrieu.com/wp-content/uploads/2023/09/AE-1200WHD-1AVDF.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
-                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <p class="card-text">Trần Hoàng Hiệp đồng hồ chính hãng</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
@@ -113,7 +113,7 @@
                                         <img src="https://image.donghohaitrieu.com/wp-content/uploads/2024/01/K002.403.641.50.13.04.jpg" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
-                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <p class="card-text">Trần Hoàng Hiệp đồng hồ chính hãng</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
@@ -123,7 +123,7 @@
                                         <img src="https://www.watchstore.vn/images/products/2024/06/14/resized/mtp-1374l-1avdf_1718337912.webp" class="card-img-top w-100" alt="...">
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
-                                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                          <p class="card-text">Trần Hoàng Hiệp đồng hồ chính hãng</p>
                                           <a href="#" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                       </div>
